Shorten the text on the button

--- a/src/main/res/layout-v21/fragment_search_add_flag.xml
+++ b/src/main/res/layout-v21/fragment_search_add_flag.xml
@@ -5,4 +5,4 @@
 	android:layout_height="wrap_content"
 	android:layout_gravity="center_horizontal"
 	android:elevation="1dp"
-	android:text="Add new flag" />
+	android:text="@string/search_add_flag" />
