--- a/src/main/res/layout/fragment_main.xml
+++ b/src/main/res/layout/fragment_main.xml
@@ -7,7 +7,7 @@
 	<ProgressBar
 		android:id="@+id/progress"
 		android:layout_width="match_parent"
-		android:layout_height="100dp"
+		android:layout_height="wrap_content"
 		style="?android:progressBarStyleHorizontal"
 		android:layout_alignParentTop="true"
 		android:indeterminate="true"/>
